# rs_plugin

./: Cargo.toml  README.md
crates/plugin_api/: Cargo.toml
crates/plugin_api/src/: lib.rs
crates/plugin_type_1/: Cargo.toml
crates/plugin_type_1/src/: lib.rs
crates/plugin_type_2/: Cargo.toml
crates/plugin_type_2/src/: lib.rs
crates/rs_plugin/: Cargo.toml
crates/rs_plugin/src/: main.rs
plugins/plugin_1/: Cargo.toml
plugins/plugin_1/src/: lib.rs
plugins/plugin_2/: Cargo.toml
plugins/plugin_2/src/: lib.rs
plugins/plugin_generic_1/: Cargo.toml
plugins/plugin_generic_1/src/: lib.rs
plugins/plugin_generic_2/: Cargo.toml
plugins/plugin_generic_2/src/: lib.rs
